test/corpus/escape_char.txt
================================================================================
Basic escape char (used as hard line break)
================================================================================
word\
word
--------------------------------------------------------------------------------
(document
  (paragraph
    (word)
    (escape_sequence
      (escape_char))
    (word)))

================================================================================
Inside attached modifier
================================================================================
*word\**
--------------------------------------------------------------------------------
(document
  (paragraph
    (bold
      (bold_open)
      (word)
      (escape_sequence
        (escape_char))
      (bold_close))))

================================================================================
Breaks up to verbatim attached modifer
================================================================================
`word\`
--------------------------------------------------------------------------------
(document
  (paragraph
    (punc)
    (word)
    (escape_sequence
      (escape_char))))

================================================================================
Not valid inside free-form standard attached modifier
================================================================================
*|word \|*
--------------------------------------------------------------------------------
(document
  (paragraph
    (free_bold
      (free_bold_open)
      (word)
      (ws)
      (punc)
      (free_bold_close))))
