test/corpus/linkables.txt
================================================================================
Basic Link
================================================================================
{word}
--------------------------------------------------------------------------------
(document
  (paragraph
    (link
      (uri_link))))

================================================================================
Link with description
================================================================================
{word}[word word]
--------------------------------------------------------------------------------
(document
  (paragraph
    (link
      (uri_link)
      (link_description
        (word)
        (ws)
        (word)))))

================================================================================
Unclosed link 1
================================================================================
{
--------------------------------------------------------------------------------
(document
  (ERROR))

================================================================================
Unclosed link 2
================================================================================
{word
--------------------------------------------------------------------------------
(document
  (ERROR
    (uri_link)))

================================================================================
Basic Anchor
================================================================================
[word]
--------------------------------------------------------------------------------
(document
  (paragraph
    (anchor
      (link_description
        (word)))))

================================================================================
Anchor with location
================================================================================
[word word]{word}
--------------------------------------------------------------------------------
(document
  (paragraph
    (anchor
      (link_description
        (word)
        (ws)
        (word))
      (uri_link))))
