test/corpus/paragraph.txt
================================================================================
Basic paragraph including soft break
================================================================================
word word
word
--------------------------------------------------------------------------------
(document
  (paragraph
    (word)
    (ws)
    (word)
    (soft_break)
    (word)))

================================================================================
Paragraph including preceding whitespaces
================================================================================
  word word
     word
    word
--------------------------------------------------------------------------------
(document
  (paragraph
    (word)
    (ws)
    (word)
    (soft_break)
    (word)
    (soft_break)
    (word)))

================================================================================
Soft break with whitespaces
================================================================================
word word   
word
--------------------------------------------------------------------------------
(document
  (paragraph
    (word)
    (ws)
    (word)
    (soft_break)
    (word)))

================================================================================
Paragraph break by multiple newlines
================================================================================
word word
word

word


word
--------------------------------------------------------------------------------
(document
  (paragraph
    (word)
    (ws)
    (word)
    (soft_break)
    (word))
  (paragraph
    (word))
  (paragraph
    (word)))

================================================================================
Paragraph break by multiple newlines with whitespaces
================================================================================
word word
word   

word
--------------------------------------------------------------------------------
(document
  (paragraph
    (word)
    (ws)
    (word)
    (soft_break)
    (word))
  (paragraph
    (word)))

================================================================================
Paragraph break by Structural modifier
================================================================================
word word
* heading
--------------------------------------------------------------------------------
(document
  (paragraph
    (word)
    (ws)
    (word))
  (test_heading
    (word)))
